--- a/prometheus-scraper/web/index.html
+++ b/prometheus-scraper/web/index.html
@@ -15,6 +15,16 @@
         <button type="submit">Scrape Pod</button>
     </form>
     <br>
+
+    <form id="query-form">
+        <label for="metric-name">Metric Name:</label>
+        <select id="metric-name"></select>
+        <label for="labels">Labels (key=value,key2=value2):</label>
+        <input type="text" id="labels" name="labels" placeholder="e.g., verb=GET,code=200">
+        <button type="submit">Query Metrics</button>
+    </form>
+    <br>
+
     <div id="main" style="width: 100%;height:600px;"></div>
     <script type="text/javascript">
         var myChart = echarts.init(document.getElementById('main'));
@@ -54,12 +64,52 @@
                     port: port
                 })
             }).then(() => {
+                // After scraping, refresh metric names and fetch a default metric
+                fetchMetricNames();
                 fetchMetrics('apiserver_request_total');
             });
         });
 
-        function fetchMetrics(name) {
-            fetch('/metrics/' + name)
+        document.getElementById('query-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const metricName = document.getElementById('metric-name').value;
+            const labelsInput = document.getElementById('labels').value;
+            const labels = {};
+            labelsInput.split(',').forEach(pair => {
+                const [key, value] = pair.split('=');
+                if (key && value) {
+                    labels[key.trim()] = value.trim();
+                }
+            });
+            fetchMetrics(metricName, labels);
+        });
+
+        function fetchMetricNames() {
+            fetch('/metrics/names')
+                .then(response => response.json())
+                .then(data => {
+                    const select = document.getElementById('metric-name');
+                    select.innerHTML = ''; // Clear existing options
+                    data.forEach(name => {
+                        const option = document.createElement('option');
+                        option.value = name;
+                        option.textContent = name;
+                        select.appendChild(option);
+                    });
+                });
+        }
+
+        function fetchMetrics(name, labels = {}) {
+            let url = '/metrics/' + name;
+            const params = new URLSearchParams();
+            for (const key in labels) {
+                params.append(key, labels[key]);
+            }
+            if (params.toString()) {
+                url += '?' + params.toString();
+            }
+
+            fetch(url)
                 .then(response => response.json())
                 .then(data => {
                     // group metrics by labels
@@ -99,6 +149,9 @@
                     });
                 });
         }
+
+        // Initial fetch of metric names when the page loads
+        fetchMetricNames();
     </script>
 </body>
 </html>
